--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.10.13",
+    "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "sequelize": "^5.21.7",
-    "unsplash-js": "^6.0.0"
+    "unsplash-js": "^6.3.0"
   }
 }
