--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
     "circular-json": "^0.5.9",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
