--- a/package.json
+++ b/package.json
@@ -19,19 +19,27 @@
   "homepage": "https://github.com/owelchez/momentos#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "circular-json": "^0.5.9",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.7.0",
     "lodash": "^4.17.20",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.10.13",
+    "mongoose": "^5.10.14",
+    "mongoose-unique-validator": "^2.0.3",
     "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "path": "^0.12.7",
-    "sequelize": "^5.21.7",
+    "sequelize": "^6.3.5",
     "unsplash-js": "^6.3.0"
   }
 }
